--- a/ChebyshevsPolynoms/src/main.ipynb
+++ b/ChebyshevsPolynoms/src/main.ipynb
@@ -10,13 +10,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
   }
  ],
  "metadata": {
