--- a/GalerkinMethod/src/main.ipynb
+++ b/GalerkinMethod/src/main.ipynb
@@ -23,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = np.linspace(0, 1, 1000)\n",
     "N = 2 # Кол-во базисных функций. Указываем начальное значение"
    ]
   },
@@ -32,11 +33,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def galerkin_method(tol=1e-6, max_N=10):\n",
+    "def galerkin_method(tol=1e-6, init_N=2, max_N=10):\n",
     "    x = sp.Symbol('x')\n",
     "    prev_residual = None\n",
     "    \n",
-    "    for N in range(1, max_N + 1):\n",
+    "    for N in range(init_N, max_N + 1):\n",
     "        phi = [x * (1 - x**i) for i in range(1, N+1)]\n",
     "        c = sp.symbols(f'c1:{N+1}')\n",
     "        u_N = sum(c[i] * phi[i] for i in range(N))\n",
@@ -54,7 +55,25 @@
     "            \n",
     "            prev_residual = residual_value\n",
     "    \n",
-    "    return u_N_solution, N"
+    "    return u_N_solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "approximated_solution = galerkin_method(init_N=N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = (np.sin(x) / np.cos(1)) - x"
    ]
   }
  ],
